--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body{
 
     background-color: lemonchiffon;
+    padding: 1%;
 }
 img    {
     border-radius: 10%;
@@ -10,9 +11,11 @@ img    {
     background-color: hwb(49 28% 0%);
 }
 
-.header{
-    background-image: url('minhaFoto.jpeg')
-    
+
+.meuNome{
+    text-align: center;
+
+
 }
 
 .nometamanho{
@@ -35,8 +38,32 @@ img    {
 .indice{
     text-align: center;
 }
-.minhafoto{
-    text-align: ;
+#foto{
+    float: left;
+    height: 214px;
+    padding: 20px ;
+    background-color: brown;
     
     
+    
+}
+.div1{
+   background-color: aqua;
+}
+
+.div2{
+    background-color: blue;
+    height: 250px;
+    position: relative;
+}
+
+#sobreMim{
+    position: absolute;
+    top: 100px;
+    right: 17%;
+
+}
+
+lu li:nth-child(odd){
+    background-color: aqua;
 }
